--- a/css/estilo.css
+++ b/css/estilo.css
@@ -358,39 +358,103 @@ section {
   }
   
   /*--------------------------------------------------------------
-  # Akills
+  # skills
   --------------------------------------------------------------*/
   .skills .progress {
     height: 60px;
     display: block;
     background: none;
     border-radius: 0;
-  }
-  
-  .skills .progress .skill {
+}
+.skills .progress .skill {
     padding: 0;
     margin: 0 0 6px 0;
     text-transform: uppercase;
     display: block;
     font-weight: 600;
     font-family: "Poppins", sans-serif;
-    color: #006aff;
-  }
-  
-  .skills .progress .skill .val {
+    color: #040b14;
+}
+.skills .progress .skill .val {
     float: right;
     font-style: normal;
-  }
-  
-  .skills .progress-bar-wrap {
-    background: #183c6b;
+}
+.skills .progress-bar-wrap{
+    background: #a0a0a3; /*cor da barra sem preenchimento */
     height: 10px;
-  }
-  
-  .skills .progress-bar {
+}
+.skills .progress-bar {
     width: 1px;
     height: 10px;
     transition: 0.9s;
-    background-color: #ff0000;
-  }
-  
+    background: #149ddd;
+}
+  /*resume*/
+.resume .resume-title{
+    font-size: 15px;
+    font-weight: 600;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    color: #040b14;
+}
+.resume .resume-item{
+    padding: 0 0 20px 20px;
+    margin-top: -2px;
+    border-left: 2px solid red;
+    position: relative;
+}
+.resume .resume-item h4{
+    line-height: 10px;
+    font-size: 10px;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-family: sans-serif;
+    color: #040b14;
+    margin-bottom: 10px;
+}
+.resume .resume-item h5{
+    font-size: 16px;
+    background: #f5f8f5;
+    padding: 5px 15px;
+    display: inline-block;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.resume .resume-item ul{
+    padding-left: 20px;
+
+}
+.resume .resume-item ul li{
+    padding-bottom: 10px;
+}
+.resume .resume-item:before{
+    content:"" ;
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    border-radius: 50px;
+    left: -9px;
+    top: 0;
+    background:whitesmoke;
+    border: 2px solid cornflowerblue;
+}
+/*portfolio*/
+.portfolio .portfolio-item{
+    margin-bottom: 30px;
+}
+.portfolio #portfolio-filters{
+    padding: 0;
+    margin: 0 auto 35px auto;
+    list-style: none;
+    text-align: center;
+    background: whitesmoke;
+    border-radius: 50px;
+}
+.portfolio #portfolio-filters li{
+    cursor: pointer;
+    display: inline-block;
+    padding: 10px 15px 8px 15px;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1;
+}
