--- a/css/estilo.css
+++ b/css/estilo.css
@@ -780,24 +780,24 @@ section {
     background: #149ddd;
     color: #fff;
 }
-.contact .php-email-form{
+.contato .php-email-form{
     width: 100%;
     padding: 30px;
     background: #fff;
     box-shadow: 0 0 24px rgba(0, 0, 0, 0.12);
 
 }
-.contact .php-email-form .form-group{
+.contato .php-email-form .form-group{
     padding-bottom: 8px;
 }
-.contact .php-email-form .validate{
+.contato .php-email-form .validate{
     display: none;
     color: red;
     margin: 0 0 15px 0;
     font-weight: 400;
     font-size: 13px;
 }
-.contact .php-email-form .error-message{
+.contato .php-email-form .error-message{
 
     display: none;
     color: #fff;
@@ -806,11 +806,11 @@ section {
     padding: 15px;
     font-weight: 600;
 }
-.contact .php-email-form .error-message br-br{
+.contato .php-email-form .error-message br-br{
     margin-top: 25px;
 
 }
-.contact .php-email-form .sent-message{
+.contato .php-email-form .sent-message{
     display: none;
     color: #fff;
     background:#090;
@@ -818,26 +818,62 @@ section {
     font-size: 13px;
     padding: 15px;
 }
-.contact .php-email-form .loading{
+.contato .php-email-form .loading{
     display: none;
     background: #fff;
     text-align: center;
     font-size: 13px;
 }
 
-.contact .php-email-form .loading::before{
+.contato .php-email-form .loading::before{
     content: "";
     display: inline-block;
     border-radius: 50%;
     width: 24px;
     height: 24px;
     margin: 0 10px -6px 0;
-    border: 3px solid #999;
+    border: 3px solid #ff2c2c;
     border-top-color: #eee;
     animation: animate-loading is linear infinite;
+}
+.contato .php-email-form .form-group{
+    margin-bottom: 15px;
 
 }
+.contato .php-email-form label{
+    padding-bottom: 8px;
+}
+.contato .php-email-form input,.contato .php-email-form textarea{
+    border-radius: 0;
+    box-shadow: none;
+    font-size: 14px;
+}
+.contato .php-email-form input{
+    height: 44px;
+}
+.contato .php-email-form textarea{
+    padding: 10px 15px;
+}
+.contato .php-email-form button[type=submit]{
+    background: #7d9bff;
+    border: 0;
+    padding: 10px 24px;
+    color: #fff;
+    transition: 0.4s;
+    border-radius: 4px;
+}
+.contato .php-email-form button[type=submit]:hover{
+    background: #110d45;
+}
 
+
+@keyframes animate-loadimg {
+    0%{/*inicio*/
+        transform: rotate(0deg);
+    }
+    100%{transform: rotate(360deg);
+    }
+}
 
 
 
